// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should change colors when user hovers over hilt 1`] = `
<article
  className="Card people-bg-off"
>
  <h3
    className="name is-white"
  >
    Luke Skywalker
  </h3>
  <div
    className="saber people-is-off"
  />
  <img
    alt="The hilt of a lightsaber. Turn the lightsaber on to favorite this card."
    className="hilt"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    src="lightsaber-bk.png"
  />
  <ul
    className="content"
  >
    <li
      key="homeworld,Tatooine-0"
    >
      species
      : 
      <span
        className="details"
      >
        Human
      </span>
    </li>
    <li
      key="homeworld,Tatooine-1"
    >
      homePop
      : 
      <span
        className="details"
      >
        200000
      </span>
    </li>
  </ul>
</article>
`;

exports[`Card should change colors when user hovers over hilt 2`] = `
<article
  className="Card people-bg-off"
>
  <h3
    className="name is-white"
  >
    Luke Skywalker
  </h3>
  <div
    className="saber people-is-off"
  />
  <img
    alt="The hilt of a lightsaber. Turn the lightsaber on to favorite this card."
    className="hilt"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    src="lightsaber-wt.png"
  />
  <ul
    className="content"
  >
    <li
      key="homeworld,Tatooine-0"
    >
      species
      : 
      <span
        className="details"
      >
        Human
      </span>
    </li>
    <li
      key="homeworld,Tatooine-1"
    >
      homePop
      : 
      <span
        className="details"
      >
        200000
      </span>
    </li>
  </ul>
</article>
`;

exports[`Card should have default state 1`] = `
Object {
  "isActive": false,
  "src": "lightsaber-wt.png",
}
`;

exports[`Card should match the snapshot 1`] = `
<article
  className="Card people-bg-off"
>
  <h3
    className="name is-white"
  >
    Luke Skywalker
  </h3>
  <div
    className="saber people-is-off"
  />
  <img
    alt="The hilt of a lightsaber. Turn the lightsaber on to favorite this card."
    className="hilt"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    src="lightsaber-wt.png"
  />
  <ul
    className="content"
  >
    <li
      key="homeworld,Tatooine-0"
    >
      species
      : 
      <span
        className="details"
      >
        Human
      </span>
    </li>
    <li
      key="homeworld,Tatooine-1"
    >
      homePop
      : 
      <span
        className="details"
      >
        200000
      </span>
    </li>
  </ul>
</article>
`;

exports[`Card should toggle isActive on when hilt is clicked 1`] = `
<article
  className="Card people-bg-glow"
>
  <h3
    className="name is-black"
  >
    Luke Skywalker
  </h3>
  <div
    className="saber people-is-glowing"
  />
  <img
    alt="The hilt of a lightsaber. Turn the lightsaber on to favorite this card."
    className="hilt"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    src="lightsaber-wt.png"
  />
  <ul
    className="content"
  >
    <li
      key="homeworld,Tatooine-0"
    >
      species
      : 
      <span
        className="details"
      >
        Human
      </span>
    </li>
    <li
      key="homeworld,Tatooine-1"
    >
      homePop
      : 
      <span
        className="details"
      >
        200000
      </span>
    </li>
  </ul>
</article>
`;

exports[`Card should toggle isActive on when hilt is clicked 2`] = `
<article
  className="Card people-bg-off"
>
  <h3
    className="name is-white"
  >
    Luke Skywalker
  </h3>
  <div
    className="saber people-is-off"
  />
  <img
    alt="The hilt of a lightsaber. Turn the lightsaber on to favorite this card."
    className="hilt"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    src="lightsaber-wt.png"
  />
  <ul
    className="content"
  >
    <li
      key="homeworld,Tatooine-0"
    >
      species
      : 
      <span
        className="details"
      >
        Human
      </span>
    </li>
    <li
      key="homeworld,Tatooine-1"
    >
      homePop
      : 
      <span
        className="details"
      >
        200000
      </span>
    </li>
  </ul>
</article>
`;
